examples/test/testpolicy8853.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy8853
  namespace: namespace311
spec:
  podSelector:
    matchLabels:
      key5: value35
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key44: value31
          key23: value14
          key45: value34
      podSelector:
        matchLabels:
          key18: value42
          key30: value39
